[gd_scene load_steps=2 format=3 uid="uid://cexa74tbt3hpv"]

[ext_resource type="Script" path="res://scenes/battle_scene.gd" id="1_0247e"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_0247e")

[node name="Chimera HP" type="Label" parent="."]
offset_left = 82.0
offset_top = 275.0
offset_right = 187.0
offset_bottom = 315.0
text = "HP: 0	
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Enemy HP" type="Label" parent="."]
offset_left = 444.0
offset_top = 275.0
offset_right = 549.0
offset_bottom = 315.0
text = "HP: 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundCounter" type="Label" parent="."]
offset_left = 230.0
offset_top = 10.0
offset_right = 444.0
offset_bottom = 58.0
text = "Round Counter:
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="timeout" from="RoundTimer" to="." method="_on_round_timer_timeout"]
